--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^8.16.0",
+    "@typescript-eslint/parser": "^8.16.0",
     "eslint": "^8",
-    "eslint-config-next": "14.2.13",
+    "eslint-config-next": "^14.2.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
